--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
-<!--header-->
+<!--headre-->
 <app-header></app-header>
 
- <!-- routes will be rendered here -->
+
+<!-- routes will be rendered here -->
  <router-outlet></router-outlet>
+
+
 
  <!--footer-->
  <app-footer></app-footer>
