--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,55 +1,39 @@
-<section class="hero is-info is-fullheight is-bold">
+<section class="hero">
   <div class="hero-body">
-  <div class="container">
-
-    <h1 class="title">Home Page!</h1>
-
-    <div class="tile is-ancestor">
-      <div class="tile is-vertical is-8">
-        <div class="tile">
-          <div class="tile is-parent is-vertical">
-            <article class="tile is-child notification is-primary">
-              <p class="title">Vertical...</p>
-              <p class="subtitle">Top tile</p>
-            </article>
-            <article class="tile is-child notification is-warning">
-              <p class="title">...tiles</p>
-              <p class="subtitle">Bottom tile</p>
-            </article>
-          </div>
-          <div class="tile is-parent">
-            <article class="tile is-child notification is-info">
-              <p class="title">Middle tile</p>
-              <p class="subtitle">With an image</p>
-              <figure class="image is-4by3">
-                <img src="https://bulma.io/images/placeholders/640x480.png">
-              </figure>
-            </article>
-          </div>
-        </div>
-        <div class="tile is-parent">
-          <article class="tile is-child notification is-danger">
-            <p class="title">Wide tile</p>
-            <p class="subtitle">Aligned with the right tile</p>
-            <div class="content">
-              <!-- Content -->
-            </div>
-          </article>
-        </div>
-      </div>
-      <div class="tile is-parent">
-        <article class="tile is-child notification is-success">
-          <div class="content">
-            <p class="title">Tall tile</p>
-            <p class="subtitle">With even more content</p>
-            <div class="content">
-              <!-- Content -->
-            </div>
-          </div>
-        </article>
-      </div>
+    <div class="container">
+      <figure class="image center">
+        <img src="assets/img/logo1.jpg" style="max-width:90px;">
+      </figure>
     </div>
+  </div>
+</section>
 
+<section class="cection  has-background-gray">
+  <div class="container">
+    <div class="columns">
+
+      <a class="column is-narraw" routerLink="/phrase">
+        <div class="notification is-info center" style="height: 340px;">
+         <p> PHRASE</p>
+        </div>
+      </a>
+
+      <a class="column is-narraw" routerLink="/tution">
+        <div class="notification is-link center" style="height: 340px;">
+          <p>TUTION</p>
+        </div>
+      </a>
+
+      <a class="column is-narraw" routerLink="/translate">
+        <div class="notification is-primary center" style="height: 340px;">
+          <p>MEMO</p>
+        </div>
+      </a>
+      <a class="column is-narraw" routerLink="/setting">
+        <div class="notification is-danger center" style="height: 340px;">
+          <p>SETTING</p>
+        </div>
+      </a>
+    </div>
   </div>
-  </div>
-  </section>
+</section>
